# chess-engine

./: .gitignore  CMakeLists.txt  README.md  chess_engine.py  input.txt  plan.md
.kilo/plans/: 1782992686331-chess-engine-enhancements.md
src/: main.cpp
src/core/: board.cpp  board.hpp  constants.hpp  types.hpp  zobrist.cpp  zobrist.hpp
src/evaluation/: evaluation.cpp  evaluation.hpp
src/movegen/: movegen.cpp  movegen.hpp
src/search/: search.cpp  search.hpp  tt.cpp  tt.hpp
src/uci/: uci.cpp  uci.hpp
